# time_track_cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs
