[package]
name = "time_track_cli"
version = "0.1.4"
authors = ["Lukas Orsvärn <lukas@orsvarn.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.31"
directories = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time_track = { git = "https://github.com/lukors/time_track", tag = "v0.1.4" }
